--- a/index.html
+++ b/index.html
@@ -248,34 +248,32 @@
 
 <!-- CONTACT -->
 <section id="contact" class="section">
-  <h2 class="section-title">CONTACT ME</h2>
-  
-  <!-- Social Links -->
-  <div class="socials">
-    <a href="https://www.facebook.com/soth.ratanak.75" class="facebook" target="_blank" rel="noopener noreferrer">
-      <i class="bi bi-facebook"></i> FACEBOOK
-    </a>
-    <a href="https://www.instagram.com/ratanaksoth_00" class="instagram" target="_blank" rel="noopener noreferrer">
-      <i class="bi bi-instagram"></i> INSTAGRAM
-    </a>
-    <a href="https://t.me/ratanaksoth05" class="telegram" target="_blank" rel="noopener noreferrer">
-      <i class="bi bi-telegram"></i> TELEGRAM
-    </a>
-  </div>
+    <h2 class="section-title">CONTACT ME</h2>
 
-  <!-- Contact Form -->
-  <form class="contact-form"
-        action="https://formsubmit.co/sothratanakk@gmail.com"
-        method="POST">
-    <input type="text" name="Name" placeholder="Your Name" required>
-    <input type="email" name="Email" placeholder="Your Email" required>
-    <input type="tel" name="Phone" placeholder="Phone Number (Not required)">
-    <textarea name="Message" placeholder="Your Message"></textarea>
+    <!-- Social Links -->
+    <div class="socials">
+        <a href="https://www.facebook.com/soth.ratanak.75" class="facebook" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-facebook"></i> FACEBOOK
+        </a>
+        <a href="https://www.instagram.com/ratanaksoth_00" class="instagram" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-instagram"></i> INSTAGRAM
+        </a>
+        <a href="https://t.me/ratanaksoth05" class="telegram" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-telegram"></i> TELEGRAM
+        </a>
+    </div>
 
-    <!-- Optional hidden fields for FormSubmit -->
-    <input type="hidden" name="_next" value="thankyou.html">
-    <input type="hidden" name="_subject" value="New Contact Message">
+    <!-- Contact Form -->
+    <form id="contactForm" class="contact-form"
+          action="https://formspree.io/f/mpqaebry"
+          method="POST">
 
+        <input type="hidden" name="_subject" value="New Contact Message">
+
+        <input type="text" name="Name" placeholder="Your Name" required>
+        <input type="email" name="Email" placeholder="Your Email" required>
+        <input type="tel" name="Phone" placeholder="Phone Number (Not required)">
+        <textarea name="Message" placeholder="Your Message" required></textarea>
     <button class="glass-glow-btn">
   <div class="svg-wrapper-1">
     <div class="svg-wrapper">
