--- a/index.html
+++ b/index.html
@@ -248,32 +248,34 @@
 
 <!-- CONTACT -->
 <section id="contact" class="section">
-    <h2 class="section-title">CONTACT ME</h2>
+  <h2 class="section-title">CONTACT ME</h2>
+  
+  <!-- Social Links -->
+  <div class="socials">
+    <a href="https://www.facebook.com/soth.ratanak.75" class="facebook" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-facebook"></i> FACEBOOK
+    </a>
+    <a href="https://www.instagram.com/ratanaksoth_00" class="instagram" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-instagram"></i> INSTAGRAM
+    </a>
+    <a href="https://t.me/ratanaksoth05" class="telegram" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-telegram"></i> TELEGRAM
+    </a>
+  </div>
 
-    <!-- Social Links -->
-    <div class="socials">
-        <a href="https://www.facebook.com/soth.ratanak.75" class="facebook" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-facebook"></i> FACEBOOK
-        </a>
-        <a href="https://www.instagram.com/ratanaksoth_00" class="instagram" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-instagram"></i> INSTAGRAM
-        </a>
-        <a href="https://t.me/ratanaksoth05" class="telegram" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-telegram"></i> TELEGRAM
-        </a>
-    </div>
+  <!-- Contact Form -->
+  <form class="contact-form"
+        action="https://formsubmit.co/sothratanakk@gmail.com"
+        method="POST">
+    <input type="text" name="Name" placeholder="Your Name" required>
+    <input type="email" name="Email" placeholder="Your Email" required>
+    <input type="tel" name="Phone" placeholder="Phone Number (Not required)">
+    <textarea name="Message" placeholder="Your Message"></textarea>
 
-    <!-- Contact Form -->
-    <form id="contactForm" class="contact-form"
-          action="https://formspree.io/f/mpqaebry"
-          method="POST">
+    <!-- Optional hidden fields for FormSubmit -->
+    <input type="hidden" name="_next" value="thankyou.html">
+    <input type="hidden" name="_subject" value="New Contact Message">
 
-        <input type="hidden" name="_subject" value="New Contact Message">
-
-        <input type="text" name="Name" placeholder="Your Name" required>
-        <input type="email" name="Email" placeholder="Your Email" required>
-        <input type="tel" name="Phone" placeholder="Phone Number (Not required)">
-        <textarea name="Message" placeholder="Your Message" required></textarea>
     <button class="glass-glow-btn">
   <div class="svg-wrapper-1">
     <div class="svg-wrapper">
@@ -285,14 +287,13 @@
   </div>
   <span>Send Message</span>
 </button>
-
-  </form>
+</form>
 
   <!-- Optional Neon Thank You Message -->
-  <div class="thank-you">
-    <p>Thank you for contacting me!</p>
-    <p>I will get back to you soon.</p>
-  </div>
+    <div id="thankYouMessage" class="thank-you">
+        <p>Thank you for your message!</p>
+        <p>I will get back to you soon.</p>
+    </div>
 </section>
 
 <script src="script.js"></script>
