Add footer section to index.html
Added footer with developer information and Cambodia flag.

--- a/index.html
+++ b/index.html
@@ -296,6 +296,18 @@
     </div>
 </section>
 
+<!-- END NAVBAR -->
+<footer class="site-footer">
+  <p class="footer-line footer-glow">
+    MADE IN CAMBODIA
+    <img src="img/cambodia-flag.png" alt="Cambodia Flag" class="flag-icon footer-flag">
+  </p>
+  <p class="footer-line footer-glow">
+    DEVELOPED BY <span class="dev-name">RATANAK-SOTH</span>
+  </p>
+</footer>
+
+
 <script src="script.js"></script>
 </body>
 <div id="music-container">
